Lost image restored

--- a/personal-project/home-page.html
+++ b/personal-project/home-page.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <div class="header">
-                <img class="img" src="../img/athens.jpg" alt="Logo">
+                <img class="img" src="./athens.jpg" alt="Logo">
                 <nav>
                     <div class="big-page-nav">
                         <ul>
